Deprecate srv/GetInput.srv.

--- a/catkin_ws/src/dartbox/CMakeLists.txt
+++ b/catkin_ws/src/dartbox/CMakeLists.txt
@@ -55,10 +55,10 @@ catkin_python_setup()
 # )
 
 ## Generate services in the 'srv' folder
-add_service_files(
-  FILES
-  GetInput.srv
-)
+# add_service_files(
+#   FILES
+#   GetInput.srv
+# )
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -68,10 +68,10 @@ add_service_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-  DEPENDENCIES
-  std_msgs
-)
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
